force-app/main/default/objects/Product2/fields/Producer__c.field-meta.xml
<CustomField>
    <fullName>Producer__c</fullName>
    <label>Producer</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>AMD</fullName>
            </value>
            <value>
                <fullName>Intel</fullName>
            </value>
            <value>
                <fullName>Asus</fullName>
            </value>
            <value>
                <fullName>Acer</fullName>
            </value>
            <value>
                <fullName>Seagate</fullName>
            </value>
            <value>
                <fullName>Silentium</fullName>
            </value>
            <value>
                <fullName>Nvidia</fullName>
            </value>
            <value>
                <fullName>Sony</fullName>
            </value>
            <value>
                <fullName>HP</fullName>
            </value>
            <value>
                <fullName>A4Tech</fullName>
            </value>
            <value>
                <fullName>Adata</fullName>
            </value>
            <value>
                <fullName>Xiaomi</fullName>
            </value>
            <value>
                <fullName>Apple</fullName>
            </value>
            <value>
                <fullName>Samsung</fullName>
            </value>
            <value>
                <fullName>Microsoft</fullName>
            </value>
            <value>
                <fullName>BenQ</fullName>
            </value>
            <value>
                <fullName>Dell</fullName>
            </value>
            <value>
                <fullName>MSI</fullName>
            </value>
            <value>
                <fullName>Biostar</fullName>
            </value>
            <value>
                <fullName>ASRock</fullName>
            </value>
            <value>
                <fullName>Philips</fullName>
            </value>
            <value>
                <fullName>Lenovo</fullName>
            </value>
            <value>
                <fullName>Cisco</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>